cli/tests/testdata/run/node_env_var_allowlist_without_unstable_flag.ts.out
[WILDCARD]error: Uncaught PermissionDenied: Requires env access to "NODE_DEBUG", run again with the --allow-env flag
console.log(Deno.env.get("NODE_DEBUG") ?? "ok");
                     ^
    at [WILDCARD]
